edit soundings for feet

--- a/web-app/templates/soundings.html
+++ b/web-app/templates/soundings.html
@@ -222,72 +222,72 @@
           </div>
 
           <div id="925r" class="tabcontent">
-            <h3>925mb</h3>
+            <h3>925mb - 2500ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_925.gif" width="100%"></p>
           </div>
 
           <div id="850r" class="tabcontent">
-            <h3>850mb</h3>
+            <h3>850mb - 5000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_850.gif" width="100%"></p>
           </div>
 
           <div id="700r" class="tabcontent">
-            <h3>700mb</h3>
+            <h3>700mb - 10000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_700.gif" width="100%"></p>
           </div>
 
           <div id="500r" class="tabcontent">
-            <h3>500mb</h3>
+            <h3>500mb - 20000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_500.gif" width="100%"></p>
           </div>
 
           <div id="300r" class="tabcontent">
-            <h3>300mb</h3>
+            <h3>300mb - 30000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_300.gif" width="100%"></p>
           </div>
 
           <div id="250r" class="tabcontent">
-            <h3>250mb</h3>
+            <h3>250mb - 34000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_250.gif" width="100%"></p>
           </div>
 
           <div id="200r" class="tabcontent">
-            <h3>200mb</h3>
+            <h3>200mb - 39000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_200.gif" width="100%"></p>
           </div>
 
           <div id="925c" class="tabcontent">
-            <h3>925mb</h3>
+            <h3>925mb - 2500ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_925.gif" width="100%"></p>
           </div>
 
           <div id="850c" class="tabcontent">
-            <h3>850mb</h3>
+            <h3>850mb - 5000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_850.gif" width="100%"></p>
           </div>
 
           <div id="700c" class="tabcontent">
-            <h3>700mb</h3>
+            <h3>700mb - 10000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_700.gif" width="100%"></p>
           </div>
 
           <div id="500c" class="tabcontent">
-            <h3>500mb</h3>
+            <h3>500mb - 20000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_500.gif" width="100%"></p>
           </div>
 
           <div id="300c" class="tabcontent">
-            <h3>300mb</h3>
+            <h3>300mb - 30000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_300.gif" width="100%"></p>
           </div>
 
           <div id="250c" class="tabcontent">
-            <h3>250mb</h3>
+            <h3>250mb - 34000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_250.gif" width="100%"></p>
           </div>
 
           <div id="200c" class="tabcontent">
-            <h3>200mb</h3>
+            <h3>200mb - 39000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_200.gif" width="100%"></p>
           </div>
 
