--- a/web-app/templates/soundings.html
+++ b/web-app/templates/soundings.html
@@ -84,25 +84,25 @@
               <div class="btn-group" role="group" aria-label="Basic example">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '925r')">925mb</button>
+                  onclick="open_tab(event, '925r')">925</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '850r')">850mb</button>
+                  onclick="open_tab(event, '850r')">850</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '700r')">700mb</button>
+                  onclick="open_tab(event, '700r')">700</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '500r')">500mb</button>
+                  onclick="open_tab(event, '500r')">500</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '300r')">300mb</button>
+                  onclick="open_tab(event, '300r')">300</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '250r')">250mb</button>
+                  onclick="open_tab(event, '250r')">250</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '200r')">200mb</button>
+                  onclick="open_tab(event, '200r')">200</button>
               </div>
             </div>
             <br>
@@ -110,30 +110,30 @@
               <div class="btn-group" role="group" aria-label="Basic example">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '925c')">925mb</button>
+                  onclick="open_tab(event, '925c')">925</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '850c')">850mb</button>
+                  onclick="open_tab(event, '850c')">850</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '700c')">700mb</button>
+                  onclick="open_tab(event, '700c')">700</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '500c')">500mb</button>
+                  onclick="open_tab(event, '500c')">500</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '300c')">300mb</button>
+                  onclick="open_tab(event, '300c')">300</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '250c')">250mb</button>
+                  onclick="open_tab(event, '250c')">250</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
-                  onclick="open_tab(event, '200c')">200mb</button>
+                  onclick="open_tab(event, '200c')">200</button>
               </div>
             </div>
             <br>
             <div>
-              <p align=center><img src="static/images/imap_skewt.png" width=500 border=1></p>
+              <p align=center><img src="static/images/imap_skewt.png" width="100%"></p>
             </div>
           </div>
         </div>
