--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -48,14 +48,23 @@
                     <br>
                     <div class="col-md">
                         <button class="btn btn-success"
-                            style="--button-color: #ffffff; --button-background-color: #c53087; --button-background-color-dark: #881c5b;"
-                            id="satellite">Satellite</button>
+                            style="--button-color: #ffffff; --button-background-color: #c53093; --button-background-color-dark: #8d1364;"
+                            id="temp">Temp</button>
                         <button class="btn btn-success"
                             style="--button-color: #ffffff; --button-background-color: #8a30c5; --button-background-color-dark: #531d77;"
-                            id="radar">Radar</button>
+                            id="satellite">Satellite</button>
                         <button class="btn btn-success"
                             style="--button-color: #ffffff; --button-background-color: #30c5a5; --button-background-color-dark: #1a7a66;"
+                            id="precip">Precip</button>
+                        <button class="btn btn-success"
+                            style="--button-color: #ffffff; --button-background-color: #91c530; --button-background-color-dark: #709e19;"
+                            id="radar">Radar</button>
+                        <button class="btn btn-success"
+                            style="--button-color: #ffffff; --button-background-color: #c5aa30; --button-background-color-dark: #9b8317;"
                             id="lightning">Lightning</button>
+                        <button class="btn btn-success"
+                            style="--button-color: #ffffff; --button-background-color: #c54630; --button-background-color-dark: #8b2817;"
+                            id="watchwarn">Watches / Warnings</button>
                     </div>
                     <br>
                 </div>
