--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -113,6 +113,17 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/oilgas/summary">Summary</a>
                         <a class="dropdown-item" href="/oilgas/map">Map</a>
+                        <a class="dropdown-item" href="/oilgas/mapbox">Mapbox</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Blog
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/blog">Posts</a>
+                        <a class="dropdown-item" href="/blogfront">Home</a>
                     </div>
                 </li>
                 <li class="nav-item">
