edit blog pieces

--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -122,8 +122,8 @@
                         Blog
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/blog">Posts</a>
-                        <a class="dropdown-item" href="/blogfront">Home</a>
+                        <a class="dropdown-item" href="/posts/bca7359faed442669aa888a2657b331f">Posts</a>
+                        <a class="dropdown-item" href="/login">Login</a>
                     </div>
                 </li>
                 <li class="nav-item">
