--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -112,8 +112,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/oilgas/summary">Summary</a>
-                        <a class="dropdown-item" href="/oilgas/map">Map</a>
-                        <a class="dropdown-item" href="/oilgas/mapbox">Mapbox</a>
+                        <a class="dropdown-item" href="/oilgas/mapbox">Map</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
