--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -1,10 +1,6 @@
 {% extends 'layout.html' %}
-
 {% block body %}
 <div class="container-fluid" id="gauges">
-    <h1>Coconut Barometer</h1>
-</div>
-<div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="alert alert-info">
@@ -90,27 +86,35 @@
         </div>
     </div>
     <div class="row">
-            <div class="col-md-12">
-                <div class="card-deck mt-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5 class="card-title" align=center>Coconut Barometer</h5>
-                        </div>
-                        <br>
-                        <p align=center>The Coconut Barometer station is a Ambient Weather WS-1400-IP connected to the ObserverIP, which communicates observation data exclusively to Weather Underground as KCABAKER38</p>
-                        <p align=center><a href="https://www.wunderground.com/personal-weather-station/dashboard?ID=KCABAKER64">Weather Underground PWS page</a></p>
-                        <p align=center>Observation data is then retrieved from Weather Underground and stored in MongoDB. The "Station Data" plots / graphs are created with plotly for this Python / Flask site all running on a cloud Kubernetes cluster. This site is an update of the previous PHP/MySQL cloud LEMP stack, which was an update to the earliest plots created by a headless Raspberry Pi 3 running wx_scraper Python software I wrote for this purpose.</p>
-                        <p align=center><img border=0 width="60%" src="static/images/wxstation.jpg"></p>
+        <div class="col-md-12">
+            <div class="card-deck mt-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title" align=center>Coconut Barometer</h5>
                     </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <h5 class="card-title" align=center>Radar</h5>
-                        </div>
-                        <p align=center><img width="100%" src="http://www.findu.com/cgi-bin/radar-find.cgi?call=KK6GPV-10"></p>
+                    <br>
+                    <p align=center>The Coconut Barometer station is a Ambient Weather WS-1400-IP connected to the
+                        ObserverIP, which communicates observation data exclusively to Weather Underground as KCABAKER38
+                    </p>
+                    <p align=center><a
+                            href="https://www.wunderground.com/personal-weather-station/dashboard?ID=KCABAKER64">Weather
+                            Underground PWS page</a></p>
+                    <p align=center>Observation data is then retrieved from Weather Underground and stored in MongoDB.
+                        The "Station Data" plots / graphs are created with plotly for this Python / Flask site all
+                        running on a cloud Kubernetes cluster. This site is an update of the previous PHP/MySQL cloud
+                        LEMP stack, which was an update to the earliest plots created by a headless Raspberry Pi 3
+                        running wx_scraper Python software I wrote for this purpose.</p>
+                    <p align=center><img border=0 width="60%" src="static/images/wxstation.jpg"></p>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title" align=center>Radar</h5>
                     </div>
+                    <p align=center><img width="100%" src="http://www.findu.com/cgi-bin/radar-find.cgi?call=KK6GPV-10">
+                    </p>
                 </div>
             </div>
         </div>
+    </div>
 </div>
-
 {% endblock %}
