--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -1,82 +1,59 @@
 {% extends 'layout.html' %}
-
 {% block body %}
-<div class="container-fluid">
-    <h1>Oil & Gas</h1>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="mapog" id='map'></div>
-            <script>
-                mapboxgl.accessToken =
-                    'pk.eyJ1IjoiYXJlZWQxNDUiLCJhIjoiY2phdzNsN2ZoMGh0bjMybzF3cTkycWYyciJ9.4aS7z-guI2VDlP3duMg2FA';
+<div class="container-fluid"><br>
+    <div class="mapog" id='map'></div>
+    <script>
+        mapboxgl.accessToken =
+            'pk.eyJ1IjoiYXJlZWQxNDUiLCJhIjoiY2phdzNsN2ZoMGh0bjMybzF3cTkycWYyciJ9.4aS7z-guI2VDlP3duMg2FA';
+            
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/satellite-v9',
+            center: [-119, 36],
+            zoom: 5
+        });
 
-                var map = new mapboxgl.Map({
-                    container: 'map',
-                    style: 'mapbox://styles/mapbox/satellite-v9',
-                    center: [-119, 36],
-                    zoom: 5
-                });
+        map.addControl(new mapboxgl.GeolocateControl({
+            positionOptions: {
+                enableHighAccuracy: true
+            },
+            trackUserLocation: true
+        }));
 
-                map.addControl(new mapboxgl.GeolocateControl({
-                    positionOptions: {
-                        enableHighAccuracy: true
+        map.on('load', function () {
+
+            map.addSource('wells', {
+                type: 'geojson',
+                data: '../static/wells.geojson'
+            });
+
+            map.addLayer({
+                'id': 'population',
+                'type': 'circle',
+                'source': 'wells',
+                'paint': {
+                    'circle-radius': {
+                        'base': 1.75,
+                        'stops': [
+                            [12, 2],
+                            [22, 20]
+                        ]
                     },
-                    trackUserLocation: true
-                }));
-
-                map.on('load', function () {
-
-                    map.addSource('wells', {
-                        type: 'geojson',
-                        data: '../static/wells.geojson'
-                    });
-
-                    map.addLayer({
-                        'id': 'population',
-                        'type': 'circle',
-                        'source': 'wells',
-                        'paint': {
-                            'circle-radius': {
-                                'base': 1.75,
-                                'stops': [
-                                    [12, 2],
-                                    [22, 20]
-                                ]
-                            },
-                            'circle-color': [
-                                'match',
-                                ['get', 'pwt'],
-                                'OG', '#46940a',
-                                'SC', '#71d624',
-                                'WF', '#2483d6',
-                                'SF', '#db2e3f',
-                                /* other */
-                                '#000000'
-                            ]
-                        }
-                    });
-                });
-            </script>
-        </div>
-    </div>
+                    'circle-color': [
+                        'match',
+                        ['get', 'pwt'],
+                        'OG', '#46940a',
+                        'SC', '#71d624',
+                        'WF', '#2483d6',
+                        'SF', '#db2e3f',
+                        /* other */
+                        '#000000'
+                    ]
+                }
+            });
+        });
+    </script>
     <div id="log-event"></div>
     <div id="log-layout"></div>
 </div>
 {% endblock %}
-
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8' />
-    <title>Draw GeoJSON points</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
-    </style>
-</head>
-<body> -->
