--- a/web-app/templates/oilgas_summary.html
+++ b/web-app/templates/oilgas_summary.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
-
 {% block body %}
-<div class="container-fluid" id="oilgas_summary">
-    <h1>Oil & Gas</h1>
-</div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="card-deck mt-4">
                 <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title" align=center>Oil & Gas Summary</h5>
+                    </div>
+                    <br>
                     <div class="table-responsive-md">
                         <table class="table table-hover table-sm" id="table_paged">
                             <thead>
