--- a/web-app/templates/soundings.html
+++ b/web-app/templates/soundings.html
@@ -1,9 +1,5 @@
 {% extends 'layout.html' %}
-
 {% block body %}
-<div class="container-fluid">
-  <h1>Soundings</h1>
-</div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
@@ -15,7 +11,7 @@
           <br>
           <div class="col-md">
             <div>
-              <div class="btn-group" role="group" aria-label="Basic example">
+              <div class="btn-group" role="group">
                 <button class="btn btn-success" id="defaultOpen"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
                   onclick="open_tab(event, 'oak')">OAK</button>
@@ -38,7 +34,7 @@
             </div>
             <br>
             <div>
-              <div class="btn-group" role="group" aria-label="Basic example">
+              <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
                   onclick="open_tab(event, 'vbg')">VBG</button>
@@ -61,7 +57,7 @@
             </div>
             <br>
             <div>
-              <div class="btn-group" role="group" aria-label="Basic example">
+              <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
                   onclick="open_tab(event, 'nkx')">NKX</button>
@@ -81,7 +77,7 @@
             </div>
             <br>
             <div>
-              <div class="btn-group" role="group" aria-label="Basic example">
+              <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
                   onclick="open_tab(event, '925r')">925</button>
@@ -107,7 +103,7 @@
             </div>
             <br>
             <div>
-              <div class="btn-group" role="group" aria-label="Basic example">
+              <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
                   onclick="open_tab(event, '925c')">925</button>
@@ -142,157 +138,140 @@
             <h5 class="card-title" align=center>Sounding Plots</h5>
           </div>
           <div id="rev" class="tabcontent">
-            <h3>KREV</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/rev.gif" width="100%"></p>
           </div>
 
           <div id="oak" class="tabcontent">
-            <h3>KOAK</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/oak.gif" width="100%"></p>
           </div>
 
           <div id="edw" class="tabcontent">
-            <h3>KEDW</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/edw.gif" width="100%"></p>
           </div>
 
           <div id="vbg" class="tabcontent">
-            <h3>KVBG</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/vbg.gif" width="100%"></p>
           </div>
 
           <div id="nkx" class="tabcontent">
-            <h3>KNKX</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/nkx.gif" width="100%"></p>
           </div>
 
           <div id="dra" class="tabcontent">
-            <h3>NDRA</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/dra.gif" width="100%"></p>
           </div>
 
           <div id="abq" class="tabcontent">
-            <h3>KABQ</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/abq.gif" width="100%"></p>
           </div>
 
           <div id="lkn" class="tabcontent">
-            <h3>KLKN</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/lkn.gif" width="100%"></p>
           </div>
 
           <div id="slc" class="tabcontent">
-            <h3>KSLC</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/slc.gif" width="100%"></p>
           </div>
 
           <div id="gjt" class="tabcontent">
-            <h3>KGJT</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/gjt.gif" width="100%"></p>
           </div>
 
           <div id="dnr" class="tabcontent">
-            <h3>KDNR</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/dnr.gif" width="100%"></p>
           </div>
 
           <div id="fgz" class="tabcontent">
-            <h3>KFGZ</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/fgz.gif" width="100%"></p>
           </div>
 
           <div id="ama" class="tabcontent">
-            <h3>KAMA</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/ama.gif" width="100%"></p>
           </div>
 
           <div id="tus" class="tabcontent">
-            <h3>KTUS</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/twc.gif" width="100%"></p>
           </div>
 
           <div id="epz" class="tabcontent">
-            <h3>KEPZ</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/epz.gif" width="100%"></p>
           </div>
 
           <div id="maf" class="tabcontent">
-            <h3>KMAF</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/maf.gif" width="100%"></p>
           </div>
 
           <div id="925r" class="tabcontent">
-            <h3>925mb - 2500ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_925.gif" width="100%"></p>
+            <h3>925mb - 2500ft - Rawinsonde</h3>
           </div>
 
           <div id="850r" class="tabcontent">
-            <h3>850mb - 5000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_850.gif" width="100%"></p>
+            <h3>850mb - 5000ft - Rawinsonde</h3>
           </div>
 
           <div id="700r" class="tabcontent">
-            <h3>700mb - 10000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_700.gif" width="100%"></p>
+            <h3>700mb - 10000ft - Rawinsonde</h3>
           </div>
 
           <div id="500r" class="tabcontent">
-            <h3>500mb - 20000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_500.gif" width="100%"></p>
+            <h3>500mb - 20000ft - Rawinsonde</h3>
           </div>
 
           <div id="300r" class="tabcontent">
-            <h3>300mb - 30000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_300.gif" width="100%"></p>
+            <h3>300mb - 30000ft - Rawinsonde</h3>
           </div>
 
           <div id="250r" class="tabcontent">
-            <h3>250mb - 34000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_250.gif" width="100%"></p>
+            <h3>250mb - 34000ft - Rawinsonde</h3>
           </div>
 
           <div id="200r" class="tabcontent">
-            <h3>200mb - 39000ft - Rawinsonde</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_200.gif" width="100%"></p>
+            <h3>200mb - 39000ft - Rawinsonde</h3>
           </div>
 
           <div id="925c" class="tabcontent">
-            <h3>925mb - 2500ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_925.gif" width="100%"></p>
+            <h3>925mb - 2500ft - Contours</h3>
           </div>
 
           <div id="850c" class="tabcontent">
-            <h3>850mb - 5000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_850.gif" width="100%"></p>
+            <h3>850mb - 5000ft - Contours</h3>
           </div>
 
           <div id="700c" class="tabcontent">
-            <h3>700mb - 10000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_700.gif" width="100%"></p>
+            <h3>700mb - 10000ft - Contours</h3>
           </div>
 
           <div id="500c" class="tabcontent">
-            <h3>500mb - 20000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_500.gif" width="100%"></p>
+            <h3>500mb - 20000ft - Contours</h3>
           </div>
 
           <div id="300c" class="tabcontent">
-            <h3>300mb - 30000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_300.gif" width="100%"></p>
+            <h3>300mb - 30000ft - Contours</h3>
           </div>
 
           <div id="250c" class="tabcontent">
-            <h3>250mb - 34000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_250.gif" width="100%"></p>
+            <h3>250mb - 34000ft - Contours</h3>
           </div>
 
           <div id="200c" class="tabcontent">
-            <h3>200mb - 39000ft - Contours</h3>
             <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_200.gif" width="100%"></p>
+            <h3>200mb - 39000ft - Contours</h3>
           </div>
 
           <div id="slidemt" class="tabcontent">
-            <h3>Slide Mountain</h3>
             <p align=center><img src="http://www.wrh.noaa.gov/images/rev/remote/slideT.png" width="100%"></p>
             <p align=center><img src="http://www.wrh.noaa.gov/images/rev/remote/slideW.png" width="100%"></p>
           </div>
