--- a/web-app/templates/posts.html
+++ b/web-app/templates/posts.html
@@ -6,7 +6,7 @@
             <div class="card-deck mt-4">
                 <div class="card">
                     <div class="card-header">
-                        <h5 class="card-title" align=center>Blog - {{ blog_title }}</h5>
+                        <h5 class="card-title" align=center>{{ blog_title }}</h5>
                     </div>
                     {% if posts|length > 0 %}
                         {% for post in posts %}
