add text editor

--- a/web-app/templates/login.html
+++ b/web-app/templates/login.html
@@ -20,7 +20,7 @@
                                 <input type="password" id="password" class="form-control" name="password">
                             </div>
                             <button type="submit" class="btn btn-success"
-                            style="--button-color: #ffffff; --button-background-color: #3033c5; --button-background-color-dark: #8d1364;"
+                            style="--button-color: #ffffff; --button-background-color: #3033c5; --button-background-color-dark: #11138a;"
                             id="temp">Log In</button>
                         </form>
                     </div>
