--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -51,12 +51,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #f0ffff;">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #d0f5f5;"><!-- #foffff -->
         <a class="navbar-brand" href="/#">
             <img id="logo" alt="logo" src="{{ url_for('static', filename='images/icon_transparent.png') }}" width="45"
-                height="45">
-            Coconut Barometer
-        </a>
+                height="45">Coconut Barometer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,9 +63,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Weather
-                    </a>
+                        aria-haspopup="true" aria-expanded="false">Weather</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/awc">Aviation Weather</a>
                         <a class="dropdown-item" href="/wx">Station Weather</a>
@@ -83,9 +79,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Flying
-                    </a>
+                        aria-haspopup="true" aria-expanded="false">Flying</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/aircraft">Aircraft</a>
                         <a class="dropdown-item" href="/paragliding">Paragliding</a>
@@ -95,9 +89,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Photos
-                    </a>
+                        aria-haspopup="true" aria-expanded="false">Photos</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/galleries">Galleries</a>
                         <a class="dropdown-item" href="/travel">Travel</a>
@@ -107,9 +99,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Oil & Gas
-                    </a>
+                        aria-haspopup="true" aria-expanded="false">Oil & Gas</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/oilgas/summary">Summary</a>
                         <a class="dropdown-item" href="/oilgas/mapbox">Map</a>
@@ -117,9 +107,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Blog
-                    </a>
+                        aria-haspopup="true" aria-expanded="false">Blog</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/posts">Posts</a>
                         <a class="dropdown-item" href="/login">Login</a>
@@ -131,7 +119,8 @@
             </ul>
         </div>
     </nav>
-    {% block body %}{% endblock %}
+    {% block body %}
+    {% endblock %}
     <script src="{{ url_for('static', filename='js/plots.js') }}"></script>
     <script src="{{ url_for('static', filename='js/gauges.js') }}"></script>
 </body>
