--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #d0f5f5;"><!-- #foffff -->
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #f0ffff;">
         <a class="navbar-brand" href="/#">
             <img id="logo" alt="logo" src="{{ url_for('static', filename='images/icon_transparent.png') }}" width="45"
                 height="45">Coconut Barometer</a>
