edits on div names

--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block body %}
-<div class="container-fluid"><br>
+<div class="container-fluid" id="oilgas_mapbox">
+    <br>
     <div class="mapog" id='map'></div>
     <script>
         mapboxgl.accessToken =
