--- a/web-app/templates/paragliding.html
+++ b/web-app/templates/paragliding.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
-<div class="container-fluid">
+<div class="container-fluid" id="paragliding">
   <div class="row">
     <div class="col-md-12">
       <div class="card-deck mt-4">
