--- a/web-app/templates/register.html
+++ b/web-app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container page-form">
+<div class="container page-form"  id="register">
     <form id="login-form" action="/auth/register" method="post">
         <div class="form-group">
             <label for="email">Email</label>
