--- a/web-app/templates/user_blogs.html
+++ b/web-app/templates/user_blogs.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container">
+<div class="container-fluid" id="user_blogs">
     <h2>{{ email }}'s blogs</h2>
     {% for blog in blogs %}
         <h3><a href="/posts/{{ blog_id }}">{{ blog.title }}</a></h3>
