--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
-<div class="container-fluid" id="gauges">
+<div class="container-fluid" id="index">
     <div class="row">
         <div class="col-md-12">
             <div class="alert alert-info">
