--- a/web-app/templates/new_blog.html
+++ b/web-app/templates/new_blog.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container">
+<div class="container-fluid" id="new_blog">
     <form id="new_blog" action="/blogs/new" method="post">
         <div class="form-group">
             <label for="title">Title</label>
