--- a/web-app/templates/new_post.html
+++ b/web-app/templates/new_post.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container">
+<div class="container-fluid" id="new_post">
     <form id="new-post" action="/posts/new/{{ blog_id }}" method="post">
         <div class="form-group">
             <label for="title">Title</label>
