update mapbox with tool tip

--- a/web-app/templates/oilgas_details.html
+++ b/web-app/templates/oilgas_details.html
@@ -179,10 +179,28 @@
               <h5 class="card-title" align=center>Offset Peformance: {{ header['api'] }}</h5>
             </div>
             <br>
-            <div class="chart" id="graph_oilgas_offsets">
+            <div class="chart" id="graph_oilgas_offset_oil">
               <script>
-                var graphs = {{ plot_offsets | safe }};
-                Plotly.plot('graph_oilgas_offsets', graphs.data, graphs.layout, {
+                var graphs = {{ plot_offset_oil | safe }};
+                Plotly.plot('graph_oilgas_offset_oil', graphs.data, graphs.layout, {
+                  displayModeBar: false,
+                  responsive: true
+                });
+              </script>
+            </div>
+            <div class="chart" id="graph_oilgas_offset_stm">
+              <script>
+                var graphs = {{ plot_offset_stm | safe }};
+                Plotly.plot('graph_oilgas_offset_stm', graphs.data, graphs.layout, {
+                  displayModeBar: false,
+                  responsive: true
+                });
+              </script>
+            </div>
+            <div class="chart" id="graph_oilgas_offset_wtr">
+              <script>
+                var graphs = {{ plot_offset_wtr | safe }};
+                Plotly.plot('graph_oilgas_offset_wtr', graphs.data, graphs.layout, {
                   displayModeBar: false,
                   responsive: true
                 });
