--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -11,7 +11,7 @@
             container: 'map',
             style: 'mapbox://styles/areed145/ck2jlfnp03oiv1cpepd4js9k6',
             center: [-119, 36],
-            zoom: 5
+            zoom: 6
         });
 
         map.addControl(new mapboxgl.GeolocateControl({
@@ -28,8 +28,8 @@
             var well = e.features[0].properties.well;
             var operator = e.features[0].properties.operator;
             var api = e.features[0].properties.api;
-            var text = "<a href=\"/oilgas/details/"+api+"\" target=\"_blank\" title=\"Opens in a new window\">"+api+"</a><br>"
-            text += "<strong>"+lease+" "+well+"</strong><br>"
+            var text = "<strong>"+lease+" "+well+"</strong><br>"
+            text += "<a href=\"/oilgas/details/"+api+"\" target=\"_blank\" title=\"Opens in a new window\">"+api+"</a><br>"
             text += operator+"<br>"
             text += field+"<br>"
 
